update projects and fix typos

--- a/a-propos.html
+++ b/a-propos.html
@@ -15,8 +15,8 @@ permalink: /a-propos/
   <div class="col-md-4 blog-sidebar">
     <div class="sidebar-module sidebar-module-inset">
       <h4 class="sidebar-title"><i class="fa fa-info-circle"></i> &nbsp; Alsace Digitale</h4>
-      <p>Alsace Digitale est une association ayant pour ambition d’animer et de promouvoir la révolution numérique dans la région Alsace. Soutenue par l'Eurométropole de Strasbourg, elle a ouvert en 2012 <a href="http://laplagedigitale.eu">le premier espace de coworking de Strasbourg</a>.<p>
-      <p>Son but est clairement défini : développer le tissu économique, créer les conditions propices à l’émergence de nouvelles entreprises, celles créées aujourd’hui ayant vocation à être les histoires à succès de demain.</p>
+      {% capture include_alsacedigitale %}{% include alsacedigitale.md %}{% endcapture %}
+      {{ include_alsacedigitale | markdownify }}
       <div class="row">
         <div class="col-xs-12 nopadding">
           <a href="http://alsacedigitale.org/" target="_blank" class="btn btn-default sidebar-button">Découvrir l'association</a>
