add meta descriptions

--- a/a-propos.html
+++ b/a-propos.html
@@ -2,6 +2,8 @@
 layout: default
 title: À Propos
 permalink: /a-propos/
+description: "Le HackSXB, c’est l’esprit critique d’Alsace Digitale, le lieu du détournement (d’objet ou de process), l’espace de dialogue avec la sphère des makers..."
+
 ---
 
 <div class="row">
