--- a/events/deroulement.html
+++ b/events/deroulement.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Déroulement d'un HackSXB
-permalink : events/deroulement/
+permalink: events/deroulement/
+description: "Découvrez le déroulement d'un HackSXB, la hackathon qui fait se réunnir la communauté de développeurs et makers de strasbourg les derniers vendredis du mois."
 ---
 
 <div class="row">
