--- a/events/index.html
+++ b/events/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Events
+description: "Découvrez les prochains rendez-vous de la communauté de développeurs et makers à Strasbourg. Les derniers vendredis du mois, mais pas que..."
 ---
 
 <div class="row">
