--- a/events/regles.html
+++ b/events/regles.html
@@ -2,6 +2,7 @@
 layout: default
 title: Règles du HackSXB
 permalink : events/regles/
+description: "Tu partages l'envie de créer et d'échanger tes découvertes avec les autres ? Le HackSXB est sûrement fait pour toi !"
 ---
 
 <div class="row">
