--- a/projets/index.html
+++ b/projets/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Projets
+description: "Quand on réunit des talents ensemble, il arrive que de belles choses en sorte... Découvrez les projets réalisés par la communauté HackSXB !"
 ---
 
 <div class="row">
