--- a/ressources/index.html
+++ b/ressources/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Ressources
+description: "La communauté HackSXB met à disposition des ressources pour vous aider à avancer dans vos projets !"
 ---
 
 <div class="row">
