--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: "HackSXB, la communauté de développeurs et makers à Strasbourg"
+description: "Le HackSXB est une communauté particulièrement active qui mobilise autant les étudiants qu’un public actif. Organisé les derniers vendredis de chaque mois, le HackSXB est une soirée dédiée à la bidouille et à la programmation..."
 ---
 
 <div class="row">
