makes the planning editable

--- a/events/deroulement.html
+++ b/events/deroulement.html
@@ -9,7 +9,7 @@ description: "Découvrez le déroulement d'un HackSXB, la hackathon qui fait se 
   <div class="col-md-12 nopadding blog-main">
     <h1 class="page-header">Déroulement d'un HackSXB</h1>
 
-    <ul class="timeline">
+    <ul class="timeline" contenteditable="true">
 	  <li>
 	    <p class="timeline-date">18h45 - 19h05</p>
 	    <div class="timeline-content">
