--- a/ressources/index.html
+++ b/ressources/index.html
@@ -24,7 +24,12 @@ description: "La communauté HackSXB met à disposition des ressources pour vous
     <div class="sidebar-module sidebar-module-inset">
       <h4 class="sidebar-title"><i class="fa fa-info-circle"></i> &nbsp; Qui y contribue ?</h4>
       <p>N'importe qui peut proposer une ressource suite à ses découvertes lors d'une session de HackSXB.</p>
-      <p>Du tutoriel au complément de documentation sur un outil ou une technologie, n'hésitez pas à y apporter votre contribution.</p>
+      <p>Du tutoriel au complément de documentation sur un outil ou une technologie, n'hésitez pas à y apporter votre contribution.</p>      
+      <div class="row">
+        <div class="col-xs-12 nopadding">
+          <a href="https://github.com/AlsaceDigitale/www.hacksxb.com" class="btn btn-default sidebar-button">Contribuer sur Github</a>
+        </div>
+      </div>
     </div>
     <div class="row">
       <div class="col-xs-12 nopadding text-center">
