add contribute link

--- a/ressources/index.html
+++ b/ressources/index.html
@@ -27,7 +27,7 @@ description: "La communauté HackSXB met à disposition des ressources pour vous
       <p>Du tutoriel au complément de documentation sur un outil ou une technologie, n'hésitez pas à y apporter votre contribution.</p>      
       <div class="row">
         <div class="col-xs-12 nopadding">
-          <a href="https://github.com/AlsaceDigitale/www.hacksxb.com" class="btn btn-default sidebar-button">Contribuer sur Github</a>
+          <a href="https://github.com/AlsaceDigitale/www.hacksxb.com/" target="_blank" class="btn btn-default sidebar-button">Contribuer sur Github</a>
         </div>
       </div>
     </div>
