--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ description: "Le HackSXB est une communauté particulièrement active qui mobili
   <div class="col-md-4 blog-sidebar">
     <div class="sidebar-module sidebar-module-inset">
       <h4 class="sidebar-calendar-title"><i class="fa fa-calendar"></i> &nbsp;Prochain événement</h4>
-      {% for post in site.categories.events limit:1 %}
+      {% for post in site.categories.events limit:2 %}
       <p class="sidebar-calendar-event"><a href="{{ post.url | prepend: site.url }}" title="{{ post.title }}"><strong>{{ post.title }}</strong></a></p>
       <p class="sidebar-calendar-info"><i class="fa fa-clock-o"> &nbsp;</i>{{ post.event_info }}</p>
       <div class="row">
@@ -29,7 +29,7 @@ description: "Le HackSXB est une communauté particulièrement active qui mobili
         <div class="col-xs-6 nopadding">
           <a href="{{ post.event_registration }}" target="_blank" class="btn btn-default sidebar-calendar-button-right">J'y vais</a>
         </div>
-      </div>
+      </div><br><br>
       {% endfor %}
     </div>
     <div class="row">
