--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@ description: "Le HackSXB est une communauté particulièrement active qui mobili
   <div class="col-md-4 blog-sidebar">
     <div class="sidebar-module sidebar-module-inset" style="padding-bottom: 0;">
       <h4 class="sidebar-calendar-title"><i class="fa fa-calendar"></i> &nbsp;Prochains événements</h4>
-      {% for post in site.categories.events limit:2 %}
+      {% for post in site.categories.events limit:1 %}
       <p class="sidebar-calendar-event"><a href="{{ post.url | prepend: site.url }}" title="{{ post.title }}"><strong>{{ post.title }}</strong></a></p>
       <p class="sidebar-calendar-info"><i class="fa fa-clock-o"> &nbsp;</i>{{ post.event_info }}</p>
-      <div class="row">
+      <div class="row" style="padding-bottom: 25px;">
         <div class="col-xs-6 nopadding">
           <a href="{{ post.url | prepend: site.url }}" class="btn btn-default sidebar-calendar-button-left">+ d'infos</a>
         </div>
         <div class="col-xs-6 nopadding">
           <a href="{{ post.event_registration }}" target="_blank" class="btn btn-default sidebar-calendar-button-right">J'y vais</a>
         </div>
-      </div><br><br>
+      </div>
       {% endfor %}
     </div>
     <div class="row">
