--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@ description: "Le HackSXB est une communauté particulièrement active qui mobili
         <div class="col-xs-6 nopadding">
           <a href="{{ post.url | prepend: site.url }}" class="btn btn-default sidebar-calendar-button-left">+ d'infos</a>
         </div>
+        {% if post.event_registration && post.event_registration != "" %}
         <div class="col-xs-6 nopadding">
           <a href="{{ post.event_registration }}" target="_blank" class="btn btn-default sidebar-calendar-button-right">J'y vais</a>
         </div>
+        {% endif %}
       </div>
       {% endfor %}
     </div>
