--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@ description: "Le HackSXB est une communauté particulièrement active qui mobili
       <div class="row" style="padding-bottom: 25px;">
         {% if post.event_registration && post.event_registration != "" %}
         <div class="col-xs-6 nopadding">
+          <a href="{{ post.url | prepend: site.url }}" class="btn btn-default sidebar-calendar-button-left">+ d'infos</a>
         {%else%}
         <div class="col-xs-12 nopadding">
+          <a href="{{ post.url | prepend: site.url }}" class="btn btn-default sidebar-button">+ d'infos</a>
         {%endif%}
-          <a href="{{ post.url | prepend: site.url }}" class="btn btn-default sidebar-calendar-button-left">+ d'infos</a>
         </div>
         {% if post.event_registration && post.event_registration != "" %}
         <div class="col-xs-6 nopadding">
